swagger auth works
